# foleys_video_engine

./: CMakeLists.txt  foleys_video_engine.h
Clips/: foleys_MovieClip.cpp
ReadWrite/: foleys_AVReader.h
ReadWrite/FFmpeg/: foleys_FFmpegReader.cpp  foleys_FFmpegReader.h
cmake/: Findffmpeg.cmake
